[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leadfuel-core"
version = "0.1.0"
description = "Shared layer for the LeadFuel app suite (service mesh + knowledge client; auth/icp/spend to follow)."
requires-python = ">=3.11"
dependencies = []  # stdlib-only by design — keep the core dependency-free

[tool.setuptools]
packages = ["leadfuel_core"]
package-dir = { "leadfuel_core" = "." }
