[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leadfuel-core"
version = "0.2.0"
description = "Shared layer + Nova OS kernel for the LeadFuel/Nova suite (service mesh + knowledge + constitution/consent/privacy/warden/mcp)."
requires-python = ">=3.11"
dependencies = []  # stdlib-only by design — keep the core dependency-free

[tool.setuptools]
packages = ["leadfuel_core"]
package-dir = { "leadfuel_core" = "." }
